--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-ansible==2.8.8
+-e git+https://github.com/vmware/vsphere-automation-sdk-python.git@7.0.0.0#egg=vsphere-automation-sdk
+ansible~=2.9
 awscli==1.16.248
-boto==2.49.0
 boto3==1.9.238
+boto==2.49.0
 botocore==1.12.238
+cryptography~=2.8.0
 dbus-python==1.2.16
 dnspython==1.16.0
 lxml==4.4.2
+netaddr==0.7.19
+openshift==0.11.0
+pygithub==1.51
+pyvmomi==6.7.3
